--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,5 +1,12 @@
-<ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
+<!--
+  <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
   <app-item-menu-inicio></app-item-menu-inicio>
 
   <app-item-menu-array></app-item-menu-array>
 </ul>
+
+-->
+
+<app-item-menu-inicio></app-item-menu-inicio>
+
+<app-item-menu-array></app-item-menu-array>
