--- a/src/app/modules/welcome/home/home.component.html
+++ b/src/app/modules/welcome/home/home.component.html
@@ -1,1 +1,36 @@
-<h1>Seja bem-vindo(a) ao mundo ruby! <img src="../../../../assets/logoRuby.png"></h1>
+<article>
+  <h1>
+    Aprenda a programar em <strong>ruby</strong>!<img src="../../../../assets/logoRuby.png">
+  </h1>
+
+  <div class="row">
+    <div class="col-12 col-sm-4 col-md-6 col-lg-8 p-2">
+      <p>
+        Se você nos encontrou é porque se interessou
+        por ruby, uma das melhores linguagens de programação do mercado.
+        Certamente, está procurando uma fonte de conteúdos onde possa aprender sobre
+        essa linguagem tão <strong>poderosa</strong> e <strong>fascinante</strong>. Portanto, seja bem-vindo(a) ao projeto <strong>Aux-Ruby-Doc</strong>!.
+      </p>
+    </div>
+
+    <div class="col-12 col-sm-8 col-md-6 col-lg-4 p-2">
+      <img src="../../../../assets/home2.svg" class="img-fluid">
+    </div>
+
+    <div class="col-12 col-sm-8 col-md-6 col-lg-4 p-2">
+      <img src="../../../../assets/home.svg" class="img-fluid">
+    </div>
+
+    <div class="col-12 col-sm-4 col-md-6 col-lg-8 p-2">
+      <p>
+        O <strong>Aux-Ruby-Doc (ARD)</strong> é uma plataforma que visa ajudar no
+        processo de aprendizagem da linguagem de programação <strong>ruby</strong>.
+        Todo conteúdo compartilhado aqui foi inserido por quem já esteve na mesma situação que você,
+        com muita curiosidade e ao mesmo tempo um pouco perdido. Sabemos que quando iniciamos os estudos
+        sobre uma nova tecnologia normalmente encontramos algumas dificuldades, por isso projetamos o ARD,
+        para ajudar pessoas aprenderem a programar em ruby.
+      </p>
+    </div>
+
+  </div>
+</article>
