--- a/src/app/components/menu/item-menu-inicio/item-menu-inicio.component.html
+++ b/src/app/components/menu/item-menu-inicio/item-menu-inicio.component.html
@@ -4,7 +4,7 @@
       <a routerLink="/welcome">Home</a>
     </li>
     <li nz-menu-item nzMatchRouter>
-      <a>Ruby</a>
+      <a routerLink="/welcome/ruby">Ruby</a>
     </li>
     <li nz-menu-item nzMatchRouter>
       <a>Primeiros passos</a>
