[welcome] create component list

--- a/src/app/modules/welcome/about-ruby/about-ruby.component.html
+++ b/src/app/modules/welcome/about-ruby/about-ruby.component.html
@@ -1,8 +1,8 @@
 <article>
-  <img src="../../../../assets/logoRuby.png" class="img-fluid">
-
   <div class="row">
-    <h4>O que é o ruby?</h4>
+    <div class="col-12">
+      <h4 class="text-center">Ruby</h4>
+    </div>
   </div>
 
   <div class="row">
@@ -10,7 +10,11 @@
   </div>
 
   <div class="row">
-    <h4>O que é o ruby?</h4>
+    <h4>Surgimento</h4>
+  </div>
+
+  <div class="row">
+    <h4>Quem usa</h4>
   </div>
 
 </article>
