--- a/src/app/modules/welcome/home/home.component.html
+++ b/src/app/modules/welcome/home/home.component.html
@@ -1,6 +1,6 @@
 <article>
   <h1>
-    Aprenda a programar em <strong>ruby</strong>!<img src="../../../../assets/logoRuby.png">
+    Aprenda a programar em <strong>ruby</strong>!<img [src]="logoRuby">
   </h1>
 
   <div class="row">
@@ -32,5 +32,20 @@
       </p>
     </div>
 
+  </div>
+
+  <div class="row mt-2">
+    <h4>Tecnologias e bibliotecas utilizadas</h4>
+    <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+      <p>Utilizamos ferramentas <span nz-tooltip [nzTooltipTitle]="tooltipText" class="italic"><i>open-source</i></span> para a construção dessa plataforma, confira a lista abaixo:</p>
+    </div>
+
+    <div class="col-12 col-sm-4 col-md-6 col-lg-4">
+      <img [src]="logoOpenSource" class="img-fluid" alt="figura ope-source">
+    </div>
+
+    <div class="col-12 col-sm-8 col-md-6 col-lg-8">
+      <app-list></app-list>
+    </div>
   </div>
 </article>
