--- a/src/app/modules/welcome/home/home.component.html
+++ b/src/app/modules/welcome/home/home.component.html
@@ -47,5 +47,19 @@
     <div class="col-12 col-sm-8 col-md-6 col-lg-8">
       <app-list></app-list>
     </div>
+
+    <div class="col-12 col-sm-12 col-md-12 col-lg-12 mt-2">
+      <nz-alert
+      nzType="info"
+      nzMessage="EXPLICAÇÃO"
+      nzDescription="Você deve está se perguntando porque o ruby não foi empregado no desenvolvimento do Aux-Ruby-Doc.
+      Decidimos não usar ruby para o desenvolvimento do projeto, pois a plataforma na verdade nada mais é do que um
+      site de compartilhamento de conteúdo, dados não são gravados, autenticação e gerenciamento de permissões não são realizados,
+      ou seja, se trata apenas de uma aplicação front-end. Portanto, chegamos a conclusão de que usar ruby meramente para construção de front-end seria fazer mau uso da tecnologia.
+      Defendemos que ruby deva ser usado para o processamamento e manipulação de dados, atuando principalmente como back-end de aplicações e não se preocupando UNICAMENTE em renderizar html.
+      Como não era a melhor escolha optamos por um framework estruturado para a construção de uma aplicação de página única (Single Page Application ou SPA), escolhendo o Angular para tal missão."
+      nzShowIcon
+      ></nz-alert>
+    </div>
   </div>
 </article>
