--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,28 @@
 * {
   font-family: 'Courier New', Courier, monospace !important;
 }
+
+.b-bottom {
+  border-bottom: 1px solid;
+  border-color: #e86b5c;
+}
+
+.b-left {
+  border-left: 5px solid;
+  border-color: #e86b5c;
+  margin-right: 3px;
+}
+
+.container-primary {
+  background-color: #e86b5c;
+  color: white;
+  padding: 5px;
+}
+
+.b-radius {
+  border-radius: 10px;
+}
+
+.txt-primary {
+  color: #e86b5c;
+}
