update estrutura about-ruby

--- a/src/app/components/menu/item-menu-inicio/item-menu-inicio.component.html
+++ b/src/app/components/menu/item-menu-inicio/item-menu-inicio.component.html
@@ -7,7 +7,7 @@
       <a routerLink="/welcome/ruby">Ruby</a>
     </li>
     <li nz-menu-item nzMatchRouter>
-      <a>Primeiros passos</a>
+      <a routerLink="/first_steps">Primeiros passos</a>
     </li>
   </ul>
 </li>
