--- a/src/app/modules/welcome/about-ruby/about-ruby.component.html
+++ b/src/app/modules/welcome/about-ruby/about-ruby.component.html
@@ -1,104 +1,9 @@
 <article>
 
-  <div class="row mb-5">
-    <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-      <h1>O que é a linguagem ruby?</h1>
-    </div>
-    <div class="col-12 col-sm-12 col-md-12 col-lg-12 area shadow">
+  <app-what-is-ruby></app-what-is-ruby>
 
-      <p>
-        Ela é mais uma das opções de linguagens de programação disponíveis no mercado, usamos tais linguagens para programar distintos tipos de dispositivos eletrônicos,
-        como por exemplo computadores, celulares, sensores. Portanto, é através das linguagens de programação que passamos instruções para tais dispositivos, conseguindo assim programá-los para executarem
-        ações desejadas.
-      </p>
+  <app-multiparadigma></app-multiparadigma>
 
-      <p>
-        O grande diferencial de <strong class="txt-primary">ruby</strong> para a maioria das outras alternativas é o fato dela ser uma linguagem feita para nós programadores! Programar em ruby é algo normalmente prazeroso e simples.
-        Ela possui sintaxe elegante e recursos poderosos, fatores que proporcionando o aumento de produtividade de seus adeptos.
-      </p>
-    </div>
-
-    <div class="mt-2 col-12 col-sm-12 col-md-12 c0l-lg-12">
-      <p class="text-center">
-        <img src="https://i.ibb.co/jgB2fx1/logoRuby.png" class="img-fluid">
-      </p>
-      <h3 class="text-center txt-primary"><strong>A melhor amiga do programador!</strong></h3>
-    </div>
-
-    <div class="mt-2 col-12 col-sm-12 col-md-12 col-lg-12 area shadow">
-      <p>
-        Foi criada pelo japônes <strong class="txt-primary">Yukihiro Matsumoto (Matz)</strong> em 1993, escrita em <a [href]="linkC" target="blank"><i>c (linguagem de programação)</i></a> e disponibilizada ao público em 1995.
-        Seu criador se inspirou em outras linguagens de programação, como:
-        <a [href]="linkLisp" target="blank"><i>Lisp</i></a>,
-        <a [href]="linkPerl" target="blank"><i>Perl</i></a>,
-        <a [href]="linkSmalltalk" target="blank"><i>Smalltalk</i></a>,
-        <a [href]="linkEiffel" target="blank"><i>Eiffel</i></a>, e
-        <a [href]="linkAda" target="blank"><i>Ada</i></a>.
-      </p>
-
-      <p>
-        Projetada para ser uma linguagem de programação produtiva e que carrega um conjunto de características, como:
-        multiparadigma, interpretada,tipagem dinâmica, tipagem forte, portabilidade, legibilidade, redigibilidade etc.
-      </p>
-    </div>
-  </div>
-
-  <div class="row mb-5">
-    <h4>Multiparadigma...</h4>
-    <div class="mt-2 col-12 col-sm-12 col-md-12 col-lg-12 area shadow">
-      <p>
-        Paradigma nada mais é do que um estilo de programação.
-      </p>
-      <p>
-        Uma linguagem multiparadigma caracteriza-se por agrupar mais de um paradigma de programação para assim melhor atender as
-        nossas necessidades, dessa forma, podemos trabalhar com vário estilos de programação usando uma única linguagem.
-      </p>
-      <p>
-        Ruby abrange de forma equilibrada os paradigmas de programação <i>imperativa</i>, <i>funcional</i> e <i>orientado a objetos</i>.
-      </p>
-
-      <p>
-        <strong class="txt-primary">Imperativa:</strong> é um paradigma aliado a arquitetura de computadores, arquitetura que foi criada por <a href="https://pt.wikipedia.org/wiki/John_von_Neumann"><i>von Neumann</i></a>.
-        Diversas linguagens de programação foram projetadas seguindo esse paradigma. Algumas catacterísticas das linguagens imperativas
-        são o uso de variáveis, atribuição de valores e fluxo de execução sequencial de comandos.
-      </p>
-      <button class="btn btn-warning mb-3">Leia mais</button>
-
-      <p>
-        <strong class="txt-primary">Funcional:</strong> é um paradigma de programação baseado em chamadas
-        de funções e que evita estados ou dados mutáveis. Prega pelo uso de constantes e não de variáveis, é declarativa e não imperativa.
-        Atualmente, é um dos paradigmas de programação mais populares.
-      </p>
-      <button class="btn btn-warning mb-3">Leia mais</button>
-
-      <p>
-        <strong class="txt-primary">Orientado a objetos:</strong> é um paradigma de programação que visa representar o mundo natural dentro do mundo computacional.
-        Algumas de suas características são o uso de classes, herança, polimorfismo, interfaces etc. Ruby é uma linguagem puramente orientada a objetos, tratando tudo como um objeto.
-      </p>
-      <button class="btn btn-warning mb-3">Leia mais</button>
-    </div>
-  </div>
-
-  <div class="row mb-5">
-    <h4>Interpretada...</h4>
-    <div class="mt-2 col-12 col-sm-12 col-md-12 col-lg-12 area shadow">
-      <p>
-        Os dispositivos que programamos não entendem a nossa língua, eles conversam através de linguagem de baixo nível ou linguagem de máquina.
-        Tal tipo de linguagem é complexa e de difícil entendimento para nós seres humanos, por isso utilizamos linguagens de programação de alto nível.
-        Uma linguagem de alto nível possui semântica próxima a nossa, no entanto, os dispositivos <strong>não</strong> utilizam linguagem de alto nível.
-      </p>
-
-      <p>
-        Para que os dispositivos entendam as nossas instruções precisamos recorrer a um tradutor, este é programa que converte nossas
-        instruções para linguagem de máquina. O tradutor de ruby é o que chamamos de interpretador.
-      </p>
-
-      <p>Ser uma linguagem interpretada significa que suas instruções são traduzidas no momento de suas execuções, diferentemente de linguagens compiladas,
-        onde primeiro o código é compilado e depois um arquivo executável é concebido.
-      </p>
-    </div>
-
-    <app-card-images></app-card-images>
-  </div>
+  <app-interpred></app-interpred>
 
 </article>
