update first-steps module

--- a/src/app/components/menu/item-menu-inicio/item-menu-inicio.component.html
+++ b/src/app/components/menu/item-menu-inicio/item-menu-inicio.component.html
@@ -1,7 +1,7 @@
 <li nz-submenu nzOpen nzTitle="Início" nzIcon="dashboard">
   <ul>
     <li nz-menu-item nzMatchRouter>
-      <a routerLink="/welcome">Home</a>
+      <a routerLink="/welcome">ARD</a>
     </li>
     <li nz-menu-item nzMatchRouter>
       <a routerLink="/welcome/ruby">Ruby</a>
