--- a/src/app/components/menu/item-menu-inicio/item-menu-inicio.component.html
+++ b/src/app/components/menu/item-menu-inicio/item-menu-inicio.component.html
@@ -1,4 +1,4 @@
-<li nz-submenu nzOpen nzTitle="Início" nzIcon="dashboard">
+<li nz-submenu nzOpen nzTitle="Início" nzIcon="home">
   <ul>
     <li nz-menu-item nzMatchRouter>
       <a routerLink="/welcome">ARD</a>
