--- a/src/app/modules/first-steps/setup/setup.component.html
+++ b/src/app/modules/first-steps/setup/setup.component.html
@@ -1,1 +1,11 @@
-<p>setup works!</p>
+<div class="row m-2">
+  <app-buttons-phases></app-buttons-phases>
+</div>
+
+<div class="row m-2">
+  <router-outlet></router-outlet>
+</div>
+
+<div class="row m-2 mt-5">
+  <app-buttons-phases></app-buttons-phases>
+</div>
