--- a/src/app/modules/welcome/about-ruby/interpred/interpred.component.html
+++ b/src/app/modules/welcome/about-ruby/interpred/interpred.component.html
@@ -8,7 +8,7 @@
     </p>
 
     <p>
-      Para que os dispositivos entendam as nossas instruções precisamos recorrer a um tradutor, este é programa que converte nossas
+      Para que os dispositivos entendam as nossas instruções precisamos recorrer a um tradutor, esse é um programa que converte nossas
       instruções para linguagem de máquina. O tradutor de ruby é o que chamamos de interpretador.
     </p>
 
