--- a/src/app/modules/welcome/about-ruby/what-is-ruby/what-is-ruby.component.html
+++ b/src/app/modules/welcome/about-ruby/what-is-ruby/what-is-ruby.component.html
@@ -6,7 +6,7 @@
 
     <p>
       Ela é mais uma das opções de linguagens de programação disponíveis no mercado, usamos tais linguagens para programar distintos tipos de dispositivos eletrônicos,
-      como por exemplo computadores, celulares, sensores. Portanto, é através das linguagens de programação que passamos instruções para tais dispositivos, conseguindo assim programá-los para executarem
+      como por exemplo computadores, celulares, sensores. Portanto, é através das linguagens de programação que passamos instruções para tais dispositivos, conseguindo assim programáramos para executarem
       ações desejadas.
     </p>
 
