--- a/src/app/components/menu/item-menu-array/item-menu-array.component.html
+++ b/src/app/components/menu/item-menu-array/item-menu-array.component.html
@@ -1,7 +1,7 @@
 <li nz-submenu nzOpen nzTitle="Array" nzIcon="form">
   <ul>
     <li nz-menu-item nzMatchRouter>
-      <a>Basic Form</a>
+      <a>push</a>
     </li>
   </ul>
 </li>
