--- a/src/app/modules/first-steps/setup/installation/windows/windows.component.html
+++ b/src/app/modules/first-steps/setup/installation/windows/windows.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-2">
+<div nz-row class="mt-2">
   <nz-collapse nzAccordion>
     <nz-collapse-panel nzHeader="WINDOWS">
       <h5>Ambiente WINDOWS <img [src]="image" class="img-fluid"></h5>
