--- a/src/app/modules/first-steps/setup/installation/linux/linux.component.html
+++ b/src/app/modules/first-steps/setup/installation/linux/linux.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div nz-row>
   <nz-collapse nzAccordion>
     <nz-collapse-panel nzHeader="LINUX">
       <h5>Ambiente LINUX (Debian, Mint, Ubuntu) <img [src]="image" class="img-fluid"></h5>
