--- a/src/app/modules/first-steps/setup/installation/mac-osx/mac-osx.component.html
+++ b/src/app/modules/first-steps/setup/installation/mac-osx/mac-osx.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-2">
+<div nz-row class="mt-2">
   <nz-collapse nzAccordion>
     <nz-collapse-panel nzHeader="MAC OS">
       <h5>Ambiente MAC OS <img [src]="image" class="img-fluid"></h5>
