--- a/src/app/modules/first-steps/setup/installation/installation.component.html
+++ b/src/app/modules/first-steps/setup/installation/installation.component.html
@@ -8,3 +8,10 @@
 <app-mac-osx></app-mac-osx>
 
 <app-windows></app-windows>
+
+<p class="mt-2">
+  Após o processo de instalação rode o comando <i class="code">ruby -v</i> para conferir se o mesmo foi realizado com sucesso.
+</p>
+
+<h4>Ferramentas de desenvolvimento</h4>
+<app-aux-tools></app-aux-tools>
