--- a/src/app/modules/first-steps/setup/buttons-phases/buttons-phases.component.html
+++ b/src/app/modules/first-steps/setup/buttons-phases/buttons-phases.component.html
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div class="col-12 col-sm-4 col-md-3 col-lg-2">
-    <nz-select [(ngModel)]="option" nzPlaceHolder="Informe o tópico desejado">
+    <nz-select name="option" [(ngModel)]="option" nzPlaceHolder="Informe o tópico desejado" (ngModelChange)="redirectToUrl()">
       <nz-option *ngFor="let p of list" [nzValue]="p.value" [nzLabel]="p.title"></nz-option>
     </nz-select>
   </div>
