first-steps: update

--- a/src/app/modules/first-steps/input-output/hello-word/hello-word.component.html
+++ b/src/app/modules/first-steps/input-output/hello-word/hello-word.component.html
@@ -15,9 +15,16 @@
 
       <nz-alert nzType="info" [nzMessage]="msg" nzShowIcon class="mt-2 mb-2"></nz-alert>
 
-      <div class="container-dark">
+      <div class="container-dark mb-2">
         <code>puts 'Olá, mundo!'</code>
       </div>
+
+      <p>
+        Pronto, como uma <strong>única</strong> instrução você foi capaz de escrever seu primeiro programa em ruby.
+        Muito fácil, né? Agora, como essa 'mágica' ocoreu? O responsável pelo sucesso do seu programa foi o método <i>puts</i>.
+        Chamadas a métodos em ruby não precisam de parêteses '()', é algo <strong>opcional</strong>, diferentemente de outras linguagens como java, c e c++. Sendo uma característica da linguagem
+         que é conhecida como <i>syntactic sugar (áçucar sintático)</i>, deixando o código mais limpo, ou seja, menos poluído.
+      </p>
     </nz-collapse-panel>
   </nz-collapse>
 
