--- a/src/app/modules/first-steps/setup/installation/aux-tools/istall-tools/istall-tools.component.html
+++ b/src/app/modules/first-steps/setup/installation/aux-tools/istall-tools/istall-tools.component.html
@@ -3,7 +3,7 @@
   <p>
     Se você vêm do javascript conhece os famosos gerenciadores de pacotes npm e yarn, no ruby temos o rubyGem ou simplesmente gem.
     Através dele você poderá ter acesso a diversas gems (bibliotecas e programas) que poderão lhe auxiliar em distintas situações, como exemplos de
-    recursos que podemos obter por meio do gerenciador de pacotes temos o irb e o pry.
+    recursos que poderá obter por meio do gerenciador de pacotes temos o irb e o pry.
   </p>
   <p>Atenção, no momento que o ruby é instalado ele já carrega o seu gerenciador de pacotes!</p>
   <p>Instale o irb: </p>
@@ -16,5 +16,5 @@
     <code>gem install pry</code>
   </div>
 
-  <p class="mt-2">Agora para usar basta digitar em seu terminal o comando pry ou irb de acordo com o que foi instalado em sua máquina. Depois pressione a tecla ENTER.</p>
+  <p class="mt-2">Agora para usar basta digitar em seu terminal o comando pry ou irb de acordo com o qual foi instalado em sua máquina. Depois pressione a tecla ENTER.</p>
 </div>
