--- a/src/app/modules/welcome/about-ruby/who-use/who-use.component.html
+++ b/src/app/modules/welcome/about-ruby/who-use/who-use.component.html
@@ -8,7 +8,7 @@
     </p>
 
     <p>
-      Conheça agora algumas das empressas e projetos que usam ruby:
+      Conheça agora algumas das empressas, organizações e projetos que usam ruby:
     </p>
   </div>
 </div>
