--- a/src/app/modules/first-steps/input-output/input-output.component.html
+++ b/src/app/modules/first-steps/input-output/input-output.component.html
@@ -1,16 +1,16 @@
 <div nz-row>
-  <h4>
-    Entrada e saída
-  </h4>
+  <div class="mb-2">
+    <h4 class="txt-primary">
+      Entrada e saída <img [src]="img" class="img-fluid">
+    </h4>
 
-  <p>
-    Se tratando de programação as primeiras coisas que geralmente aprendemos são a exibir mensagens e armazenar valores (dados).
-    Portanto, começaremos a jornada no mundo ruby abordando esses conceitos.
-  </p>
-
-  <p class="text-center">
-    <img [src]="img">
-  </p>
+    <p>
+      Se tratando de programação as primeiras coisas que geralmente aprendemos são a exibir mensagens e armazenar valores (dados).
+      Portanto, começaremos a jornada no mundo ruby abordando esses conceitos.
+    </p>
+  </div>
 
   <app-hello-word></app-hello-word>
+
+  <app-reader></app-reader>
 </div>
