--- a/src/app/modules/first-steps/buttons-phases/buttons-phases.component.html
+++ b/src/app/modules/first-steps/buttons-phases/buttons-phases.component.html
@@ -1,11 +1,7 @@
-<div class="row">
-  <p>Tópicos:</p>
-</div>
-
-<div class="row">
-  <div class="col-12 col-sm-4 col-md-3 col-lg-2">
-    <nz-select name="option" [(ngModel)]="option" nzPlaceHolder="Informe o tópico desejado" (ngModelChange)="redirectToUrl()">
-      <nz-option *ngFor="let p of list" [nzValue]="p.value" [nzLabel]="p.title"></nz-option>
-    </nz-select>
-  </div>
+<div nz-row>
+  <nz-collapse>
+    <nz-collapse-panel nzHeader="Tópicos">
+      <button class="btn btn-light m-1" *ngFor="let p of list" (click)="redirectToUrl(p?.value)">{{p?.title}}</button>
+    </nz-collapse-panel>
+  </nz-collapse>
 </div>
