[first-steps] data-types: update content

--- a/src/app/modules/first-steps/data-types/data-types.component.html
+++ b/src/app/modules/first-steps/data-types/data-types.component.html
@@ -1,14 +1,20 @@
 <div nz-row>
   <h4 class="txt-primary">Tipos de dados</h4>
   <p>
-    Os dados que são manipulados por programas possuem tipos. Por exemplo, o nome de um cliente não é do mesmo tipo do
-    valor total comprado por ele em uma loja.
+    Os dados que são manipulados por programas possuem tipos.
+    Por exemplo, o nome de um cliente não é do mesmo tipo do valor total comprado por ele em uma loja.
   </p>
 
   <p>
     Os tipos de dados possuem muita importância dentro do mundo da programação. Eles definem
     quais operações poderão serem realizadas com os dados. Acredito que concorde que seria muito estranho pedir
     para o computador dividir a letra <i>A</i> pela letra <i>C</i>.
+  </p>
+
+  <nz-alert nzType="info" nzMessage="Detalhe: em ruby até mesmo os tipos de dados são objetos!" nzShowIcon></nz-alert>
+
+  <p class="text-center">
+    <img [src]="troubledComputer" class="img-fluid img-border">
   </p>
 
   <app-string-type></app-string-type>
