[first-steps] config string-interpolation

--- a/src/app/modules/first-steps/input-output/reader/reader.component.html
+++ b/src/app/modules/first-steps/input-output/reader/reader.component.html
@@ -1,14 +1,17 @@
 <div nz-row class="mt-2">
   <nz-collapse nzAccordion>
     <nz-collapse-panel nzHeader="Armazenando valores...">
-      <h5 class="txt-primary"><fa-icon [icon]="memory"></fa-icon> Variáveis</h5>
-      <p>
-        A maioria dos programas desenvolvidos precisa armazenar dados, como por exemplo: data de nascimento, endereço, número de cartão de crédito ou débito, nome etc.
-        Na computação existe o que é denominado de variável, que em poucas palavras é uma posição de memória do computador destinada a armazenar valores de um dado tipo de dado.
-        Para manipular essas variáveis (endereços de memória) são atribuídas a elas nomes.
-      </p>
 
-      <h5 class="txt-primary">Declaração e atribuição de valores a variáveis</h5>
+      <div class="container-dark-hover-radius">
+        <h5 class="txt-primary"><fa-icon [icon]="memory"></fa-icon> Variáveis</h5>
+        <p>
+          A maioria dos programas desenvolvidos precisa armazenar dados, como por exemplo: data de nascimento, endereço, número de cartão de crédito ou débito, nome etc.
+          Na computação existe o que é denominado de variável, que em poucas palavras é uma posição de memória do computador destinada a armazenar valores de um dado tipo de dado.
+          Para manipular essas variáveis (endereços de memória) são atribuídas a elas nomes.
+        </p>
+      </div>
+
+      <h6 class="txt-primary">Declaração e atribuição de valores</h6>
 
       <p>
         Para delcarar uma variável em ruby precisamos definir apenas um nome e atribuir um valor para ela.
