--- a/src/app/modules/first-steps/data-types/string-type/string-type.component.html
+++ b/src/app/modules/first-steps/data-types/string-type/string-type.component.html
@@ -1,1 +1,18 @@
-<p>string-type works!</p>
+<section nz-row>
+    <nz-collapse nzAccordion class="ard-bg-primary">
+      <nz-collapse-panel nzHeader="String: trabalhando com caracteres">
+        <app-intro-string-type></app-intro-string-type>
+        <hr>
+        <app-string-interpolation></app-string-interpolation>
+      </nz-collapse-panel>
+
+      <nz-collapse-panel nzHeader="Number: trabalhando com números...">
+        <p>Em construção...</p>
+      </nz-collapse-panel>
+
+      <nz-collapse-panel nzHeader="Boolean: trabalhando com booleanos...">
+        <p>Em construção...</p>
+      </nz-collapse-panel>
+    </nz-collapse>
+
+</section>
