--- a/src/styles.css
+++ b/src/styles.css
@@ -78,6 +78,20 @@ code {
   color: white;
 }
 
+/* BACKGOUND FUNDO DE COR */
+
+.ard-bg-primary {
+  background-color: #e86b5c;
+}
+
+.ard-bg-alternative {
+  background-color: #001529;
+}
+
+.ard-bg-salmao {
+  background-color: #fa7f72;
+}
+
 code .txt-primary {
   font-weight: bold;
 }
