update first-steps and style.css

--- a/src/app/modules/first-steps/data-types/string-type/string-type.component.html
+++ b/src/app/modules/first-steps/data-types/string-type/string-type.component.html
@@ -1,5 +1,10 @@
 <section nz-row>
     <nz-collapse nzAccordion class="ard-bg-primary">
+
+      <nz-collapse-panel nzHeader="Inferência de tipos...">
+        <app-type-inference></app-type-inference>
+      </nz-collapse-panel>
+
       <nz-collapse-panel nzHeader="String: trabalhando com caracteres">
         <app-intro-string-type></app-intro-string-type>
         <hr>
