--- a/src/app/modules/first-steps/input-output/hello-word/hello-word.component.html
+++ b/src/app/modules/first-steps/input-output/hello-word/hello-word.component.html
@@ -15,7 +15,7 @@
 
       <nz-alert nzType="info" [nzMessage]="msg" nzShowIcon class="mt-2 mb-2"></nz-alert>
 
-      <div class="container-dark mb-2">
+      <div class="ard-terminal mb-2">
         <code><i class="command">puts</i> 'Olá, mundo!'</code>
       </div>
 
@@ -31,7 +31,7 @@
          que é conhecida como <i>syntactic sugar (áçucar sintático)</i>, deixando o código mais limpo, ou seja, menos poluído. Mas como é algo opcional você pode fazer uso dos (), observe:
       </p>
 
-      <div class="container-dark mb-2">
+      <div class="ard-terminal mb-2">
         <code><i class="command">puts</i> ('Olá, mundo!')</code>
       </div>
     </nz-collapse-panel>
