[first-steps] data-types: create strong-and-dunamic-typing

--- a/src/app/modules/first-steps/data-types/type-inference/type-inference.component.html
+++ b/src/app/modules/first-steps/data-types/type-inference/type-inference.component.html
@@ -46,7 +46,7 @@
   </div>
 
   <p class="mt-2">
-    A declaração de 03 (três) variáveis foi feita, mas você pode está se perguntando quais são os tipos de dados das variáveis declaradas.
+    A declaração de 03 (três) variáveis foi feita, mas você pode está se perguntando quais são os tipos de dados das variáveis declaradas?
     Como podemos descobrir isso? Muito simples, basta perguntar para a própria variável! Existe um método chamado <i>class</i> que será útil nessa missão, analise o código abaixo:
   </p>
 
