--- a/src/app/modules/first-steps/data-types/data-types.component.html
+++ b/src/app/modules/first-steps/data-types/data-types.component.html
@@ -17,5 +17,32 @@
     <img [src]="troubledComputer" class="img-fluid img-border">
   </p>
 
-  <app-string-type></app-string-type>
+  <section nz-row>
+    <nz-collapse nzAccordion class="ard-bg-primary">
+
+      <nz-collapse-panel nzHeader="Inferência de tipos...">
+        <app-type-inference></app-type-inference>
+      </nz-collapse-panel>
+
+      <nz-collapse-panel nzHeader="Tipagem forte e dinâmica...">
+        <app-strong-and-dynamic-typing></app-strong-and-dynamic-typing>
+      </nz-collapse-panel>
+
+      <nz-collapse-panel nzHeader="String: trabalhando com caracteres">
+        <app-string-type></app-string-type>
+      </nz-collapse-panel>
+
+      <nz-collapse-panel nzHeader="Number: trabalhando com números...">
+        <p>Em construção...</p>
+      </nz-collapse-panel>
+
+      <nz-collapse-panel nzHeader="Boolean: trabalhando com booleanos...">
+        <p>Em construção...</p>
+      </nz-collapse-panel>
+    </nz-collapse>
+
+</section>
+
+
+
 </div>
